--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.nextbreakpoint</groupId>
 	<artifactId>SQLTemplate</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -27,6 +30,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>maven-repository</id>
+			<url>file://${user.home}/maven-repository</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -43,5 +52,16 @@
 			<artifactId>h2</artifactId>
 			<version>1.4.190</version>
 		</dependency>
+		<dependency>
+			<groupId>com.nextbreakpoint</groupId>
+			<artifactId>Try</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<repository>
+			<id>maven-repository</id>
+			<url>file://${user.home}/maven-repository</url>
+		</repository>
+	</distributionManagement>
 </project>
