--- a/sqltemplate/pom.xml
+++ b/sqltemplate/pom.xml
@@ -66,13 +66,13 @@
 		<dependency>
 			<groupId>com.nextbreakpoint</groupId>
 			<artifactId>com.nextbreakpoint.try</artifactId>
-			<version>1.0</version>
+			<version>1.1</version>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
 		<repository>
 			<id>maven-repository</id>
-			<url>file://${user.home}/maven-repository</url>
+			<url>file://${project.build.directory}/maven-repository</url>
 		</repository>
 	</distributionManagement>
 </project>
