--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.nextbreakpoint</groupId>
-		<artifactId>com.nextbreakpoint.sql</artifactId>
+		<artifactId>com.nextbreakpoint.sqltemplate</artifactId>
 		<version>1.0</version>
 	</parent>
-	<artifactId>com.nextbreakpoint.sql.repository</artifactId>
+	<artifactId>com.nextbreakpoint.sqltemplate.repository</artifactId>
 	<packaging>pom</packaging>
 	<build>
 		<plugins>
