--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>1.3.0</version>
 	<packaging>jar</packaging>
 	<name>SQLTemplate</name>
-	<description>SQLTemplate implements a functional API for executing SQL statements</description>
+	<description>SQLTemplate implements a fluent API for executing SQL statements</description>
 	<url>https://github.com/nextbreakpoint/sqltemplate</url>
 	<licenses>
 		<license>
