--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<licenses>
 		<license>
 			<name>BSD 3</name>
-			<url>https://github.com/nextbreakpoint/sqltemplate/blob/master/LICENSE</url>
+			<url>http://nextbreakpoint.com/licenses/BSD3</url>
 		</license>
 	</licenses>
 	<developers>
@@ -109,7 +109,7 @@
 		<dependency>
 			<groupId>com.nextbreakpoint</groupId>
 			<artifactId>com.nextbreakpoint.try</artifactId>
-			<version>1.3.0</version>
+			<version>1.3.1</version>
 		</dependency>
 	</dependencies>
 </project>
