--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 		<dependency>
 			<groupId>com.nextbreakpoint</groupId>
 			<artifactId>com.nextbreakpoint.try</artifactId>
-			<version>1.3.2</version>
+			<version>1.3.3</version>
 		</dependency>
 	</dependencies>
 	<profiles>
@@ -117,7 +117,7 @@
 			<id>ossrh</id>
 			<activation>
 				<property>
-					<name>repo</name>
+					<name>channel</name>
 					<value>ossrh</value>
 				</property>
 			</activation>
@@ -161,7 +161,7 @@
 			<id>bintray</id>
 			<activation>
 				<property>
-					<name>repo</name>
+					<name>channel</name>
 					<value>bintray</value>
 				</property>
 			</activation>
@@ -186,9 +186,57 @@
 			<distributionManagement>
 				<repository>
 					<id>bintray</id>
-					<url>https://api.bintray.com/maven/andrea-medeghini/maven/com.nextbreakpoint.sqltemplate</url>
+					<url>https://api.bintray.com/maven/${bintrayAccount}/maven/${project.artifactId}</url>
 				</repository>
 			</distributionManagement>
+		</profile>
+		<profile>
+			<id>github</id>
+			<activation>
+				<property>
+					<name>channel</name>
+					<value>github</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>de.jutzig</groupId>
+						<artifactId>github-release-plugin</artifactId>
+						<version>1.1.1</version>
+						<configuration>
+							<releaseName>${project.name} ${project.version}</releaseName>
+							<tag>v${project.version}</tag>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>twitter</id>
+			<activation>
+				<property>
+					<name>channel</name>
+					<value>twitter</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.nextbreakpoint</groupId>
+						<artifactId>twitter-maven-plugin</artifactId>
+						<version>1.0.0</version>
+						<configuration>
+							<debug>false</debug>
+							<oauthConsumerKey>${consumerKey}</oauthConsumerKey>
+							<oauthConsumerSecret>${consumerSecret}</oauthConsumerSecret>
+							<oauthAccessToken>${accessToken}</oauthAccessToken>
+							<oauthAccessTokenSecret>${accessTokenSecret}</oauthAccessTokenSecret>
+							<status>Version ${project.version} of ${project.name} has been released! Grab it from Maven Central, Bintray or GitHub! ${project.url}</status>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
