--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>1.4.0</version>
 	<packaging>jar</packaging>
 	<name>SQLTemplate</name>
-	<description>SQLTemplate implements a fluent API for executing SQL statements</description>
+	<description>SQLTemplate implements a fluent interface for executing SQL statements</description>
 	<url>https://github.com/nextbreakpoint/sqltemplate</url>
 	<licenses>
 		<license>
@@ -109,7 +109,7 @@
 		<dependency>
 			<groupId>com.nextbreakpoint</groupId>
 			<artifactId>com.nextbreakpoint.try</artifactId>
-			<version>2.0.0</version>
+			<version>2.0.1</version>
 		</dependency>
 	</dependencies>
 	<profiles>
@@ -186,7 +186,7 @@
 			<distributionManagement>
 				<repository>
 					<id>bintray</id>
-					<url>https://api.bintray.com/maven/${bintrayAccount}/maven/${project.artifactId}</url>
+					<url>https://api.bintray.com/maven/${bintrayAccount}/maven/${project.artifactId}/;publish=1</url>
 				</repository>
 			</distributionManagement>
 		</profile>
@@ -225,14 +225,14 @@
 					<plugin>
 						<groupId>com.nextbreakpoint</groupId>
 						<artifactId>twitter-maven-plugin</artifactId>
-						<version>1.0.0</version>
+						<version>1.0.1</version>
 						<configuration>
 							<debug>false</debug>
 							<oauthConsumerKey>${consumerKey}</oauthConsumerKey>
 							<oauthConsumerSecret>${consumerSecret}</oauthConsumerSecret>
 							<oauthAccessToken>${accessToken}</oauthAccessToken>
 							<oauthAccessTokenSecret>${accessTokenSecret}</oauthAccessTokenSecret>
-							<status>Version ${project.version} of ${project.name} has been released! Grab it from Maven Central, Bintray or GitHub! ${project.url}</status>
+							<status>Version ${project.version} of ${project.name} has been released! ${project.url}</status>
 						</configuration>
 					</plugin>
 				</plugins>
